# MageQuest-2.0

./: .clang-format  .gitignore  CMakeLists.txt  DataBase.sqlite  GameSave.sqlite  README.md  TODO.md  credits.txt  fonts.pdn  mgs_doc.txt
cmakelists/linx/: CMakeLists.txt
res/Dialog/Quests/: IntoTheGrassLands.txt  MarlaQuest.txt  TheGroveSecret.txt  Tutorial.txt  mayor_audition.txt
res/Quests/: Baldur.mgqs  FirstSteps.mgqs  HillcrestPuzzle.mgqs  Marla.txt  StartSomethingNew.txt  TheGrovesSecret.txt
res/mgi/: DifficultyScaling.mgi  Effects.mgi  ItemSets.mgi  Monsters.mgi  Projectiles.mgi  Skills.mgi  TalentConnections.mgi  TransitionMap.mgi
src/: Game.h  Includes.h  benchmark.py  main.cpp
src/enums/: Enums.h
src/gameobjects/: Entity.h  Monster.h  NPC.h  Player.h  Projectile.h  WorldObject.h
src/gameobjects/components/: AttackComponent.h  BezierCurve.h  HealthDropComponent.h  ThreatManager.h
src/gameobjects/elements/: ThreatManager.h
src/gameobjects/entities/: Entity.h
src/gameobjects/entities/attributes/: Stats.h  Talents.h
src/gameobjects/entities/types/: Monster.h  NPC.h  Player.h  Projectile.h
src/gameobjects/entities/types/projectiles/: FireBall.h  PoisonBall.h
src/gameobjects/items/: Item.h
src/gameobjects/monsters/: BloodHound.h  Ghost.h  MonsterAbilitiesUtil.h  Monsters.h  SkeletonArcher.h  SkeletonSpear.h  SkeletonWarrior.h  Wolf.h
src/gameobjects/npcs/: Aria.h  Deckard.h  Marla.h  NPCS.h  Nietzsche.h  ReceptionGrove.h  Satiro.h  Trader.h
src/gameobjects/projectiles/: BlastHammer.h  Dummy.h  EnergySphere.h  FireBall.h  FireBall_P.h  FireSword.h  FrostNova.h  IceLance.h  InfernoRay.h  Lightning.h  PoisonBall.h  PowerSurge.h  Projectiles.h  PsychicScream.h  PyroBlast.h  SolarFlare.h  ThunderSplash.h  ThunderStrike.h  VoidEruption.h  VoidField.h
src/gameobjects/worldobjects/: AoEIndicator.h  Chests.h  DroppedItem.h
src/gameplay/: Ability.h  GameStatistics.h  Item.h  ItemSets.h  Skill.h  Stats.h  StatusEffect.h  StatusEffectHandler.h  Talent.h  TalentEffect.h  UniqueEffect.h
src/gameplay/abilities/: Dummy.h  FireBall.h  FireStrike.h
src/gameplay/effects/: Burn.h  Effects.h  Slow.h  StatusEffects.h  Stun.h  TalentEffects.h  UniqueEffects.h
src/gameplay/handlers/: ItemDropHandler.h  StatusEffectHandler.h
src/gameplay/skills/: BlastHammer_Skill.h  Dummy.h  EnergySphere_Skill.h  FireBall.h  FireBall_Skill.h  FireStrike.h  FireStrike_Skill.h  Skills.h
src/gamestateio/: DataBaseHandler.h  GameLoader.h  GameSaver.h  LoadingUtil.h
src/gamestateio/loaders/: TileLoader.h
src/gamestateio/loading/: EntityResource.h  EntityResources.h  LoadingUtil.h
src/gamestateio/loading/loaders/: EntityLoader.h  EntityStateLoader.h  FontLoader.h  GameInfoLoader.h  GameSaver.h  ItemLoader.h  MapLoader.h  MiscLoader.h  MusicLoader.h  ProjectileLoader.h  QuestLoader.h  SkillLoader.h  SoundLoader.h  StatLoader.h  TalentLoader.h  TextureLoader.h  TileLoader.h
src/gamestateio/saving/: EntitySaver.h  ItemSaver.h  MapCoverSaver.h  QuestSaver.h  StatSaver.h
src/graphics/: BattleMap.h  DialogueRender.h  GifDrawer.h  Lighting.h  LogoDrawer.h  MapManager.h  ScreenEffects.h  TileManager.h  WorldAnimations.h  WorldRender.h
src/graphics/elements/: AnimationList.h  GifDrawer.h  LogoDrawer.h
src/graphics/maps/: Map.h
src/multiplayer/: Client.h  MessageTypes.h  Multiplayer.h  NetPlayer.h  Server.h
src/multiplayer/menus/: HostMenu.h  ServerBrowser.h
src/netcode/: Multiplayer.h
src/pathfinding/: PathFinder.h
src/quest/: Objectives.h  Quest.h  QuestHandler.h  QuestResources.h  QuestStorage.h  ScriptParser.h  ScriptedNodes.h
src/quest/elements/: Nodes.h  QuestReward.h
src/quest/quests/: Tutorial.h
src/quests/: Objective.h  Quest.h  QuestResources.h
src/raylib-extension/: DrawFunctions.h
src/resources/: Colors.h  FontStorage.h  SoundStorage.h  TextureStorage.h
src/steam/: Callbacks.h  SteamCallbacks.h
src/system/: BenchMark.h  CollisionDetection.h  Colors.h  Definitions.h  Enums.h  GameSettings.h  GameStatistics.h  GlobalVariables.h  KeyPressUpdateTickRate.h  NBNet.h  SoundStorage.h  TextureStorage.h  Util.h
src/ui/: Component.h  PlayerUI.h  StyleSheet.h  UIManager.h  Window.h
src/ui/elements/: Button.h  Content.h  ExpandableMenu.h  ExpandablePanel.h  Notification.h  Panel.h  QuestText.h  ScrollPane.h  SlideComponent.h  SoundComponent.h  TextCell.h  TextField.h  TextPanel.h  TexturedButton.h  ToolTip.h  TradeWIndow.h  UIHitbox.h  Window.h
src/ui/game/: DialogueRender.h  HealthBar.h  LoadingScreen.h  MiniMap.h  RegionMap.h
src/ui/menus/: GameMenu.h  HostGame.h  MainMenu.h  ServerBrowser.h  SettingsMenu.h
src/ui/notifications/: AlertText.h  Notifications.h
src/ui/player/: BagPanel.h  CharacterBag.h  CharacterPanel.h  HotBar.h  PlayerUI.h  QuestPanel.h  SkillPanel.h  StatusBar.h  TalentPanel.h  XPBar.h
src/ui/player/elements/: AdjacencyMatrix.h  CharacterItems.h  CharacterStats.h  DamageNumber.h  InventorySlot.h  ItemSlot.h  SkillSlot.h  TalentNode.h  TextCell.h  ToolTip.h  XPBar.h
src/ui/statusmessages/: Notifications.h  StatusText.h
src/ui/styles/: ashes.h  cyber.h
src/util/: Colors.h  Enums.h  GlobalVariables.h  MathUtil.h  Util.h
src/world/: Map.h  MusicStreamer.h  SoundManager.h  TileEvents.h  TransitionParser.h  WorldManager.h
src/world/elements/: MusicStreamer.h  SpawnTrigger.h  TileActions.h  TileEffects.h  TileProximity.h  TransitionParser.h
src/world/maps/: Map.h
